src/UI/pages/dashboard/styles.scss
@use '../../styles/colors' as *;
@use '../../styles/index' as *;
@use '../../styles/fonts' as *;
@use '../../styles/variables' as *;

.dashboard-page {
    padding: 20px;
    // max-width: 1400px;
    margin: 0 auto;
    color: var(--text-primary, #fff); // Update variables to match your colors.scss
    height: calc(100dvh - $footer-height); // Assuming bottom nav is ~80px
    overflow: hidden;
    background-color: var(--dashboard-BG);

    @include mobile {
        height: 100%;
    }

    .dashboard-grid {
        display: grid;
        grid-template-columns: auto 1fr auto;
        gap: 20px;
        height: 100%;

        // @media (max-width: 1024px) {
        //     grid-template-columns: 1fr;
        //     overflow-y: auto;
        // }

        @media (max-width: 1500px) {
            grid-template-columns: 1fr
        }
    }

    .dashboard-col {
        display: flex;
        flex-direction: column;
        gap: 20px;
        height: 100%;
        overflow: hidden;
    }

    .dashboard-panel {
        background: var(--dashboard-panel-BG);
        border: 1px solid var(--dashboard-panel-border-color);
        border-radius: 12px;
        overflow: hidden;
        display: flex;
        flex-direction: column;
        max-height: stretch;

        @include mobile {
            max-height: 80vh;
        }

        $TeamTableColumns: 48px 1fr 50px 50px 50px 50px 60px;
        $GolferTableColumns: 40px 1fr 70px 40px 40px 40px 40px 56px;
        $Mobile_TeamTableColumns: 40px 1fr 42px 42px 42px 42px 50px;
        $Mobile_GolferTableColumns: 38px 1fr 66px 54px;

        .panel-upper {
            background-color: var(--dashboard-panel-upper-BG);
            padding: 8px 0 0 0;

            &.team-details {
                padding-bottom: 8px;
                border-bottom: 1px solid var(--dashboard-header-border-color);
            }

            .panel-header {
                font-family: 'Tiempo', serif;
                color: var(--dashboard-panel-title);
                font-size: 1.2rem;
                font-weight: 600;
                padding: 8px 16px;
                text-transform: uppercase;
                letter-spacing: 1px;
                text-align: center;
            }

            .leaderboard-header {
                display: grid;
                align-items: center;
                border-bottom: 1px solid var(--dashboard-header-border-color);
                color: var(--dashboard-table-header-FC);
                font-size: 0.75rem;
                font-weight: bold;
                padding: 0 0 0 3px; // +3px needed to match the extra padding from the highlighted row

                &.team-table {
                    grid-template-columns: $TeamTableColumns;

                    @include mobile {
                        grid-template-columns: $Mobile_TeamTableColumns;
                    }
                }

                &.golfer-table {
                    grid-template-columns: $GolferTableColumns;
                    padding-right: 6px; // account for the scrollbar

                    @include mobile {
                        grid-template-columns: $Mobile_GolferTableColumns;

                        .round-score {
                            @include mobile {
                                display: none;
                            }
                        }
                    }
                }

                .col {
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    text-align: center;
                    padding: 8px;
                }

                .pos {
                    padding-left: 16px;

                    @include mobile {
                        padding-left: 8px;
                    }
                }

                .golfer {
                    justify-content: flex-start;
                }

                .total-score {
                    padding-right: 16px;

                    @include mobile {
                        padding-right: 6px;
                    }
                }
            }
        }

        .panel-lower {
            background-color: var(--dashboard-panel-lower-BG);
            overflow: overlay;

            &.team-details {
                display: flex;
                justify-content: center;
            }

            .mini-leaderboard {
                font-size: 0.9rem;
                color: var(--dashboard-table-FC);
                background-color: var(--dashboard-table-BG);
                flex: 1;

                .leaderboard-row {
                    display: grid;
                    align-items: center;
                    cursor: pointer;
                    transition: background 0.2s;
                    background-color: var(--dashboard-table-BG);
                    border-left: 3px solid var(--scorecard-table-name-BG); // needed to match the extra padding from the highlighted row

                    &.team-table {
                        grid-template-columns: $TeamTableColumns;

                        @include mobile {
                            grid-template-columns: $Mobile_TeamTableColumns;
                        }

                        .team {
                            display: flex;
                            align-items: center;
                            justify-content: space-between;

                            .golfer-icon {
                                margin-left: 4px;
                                color: var(--dashboard-table-FC);
                                opacity: .7;
                            }
                        }
                    }

                    &.golfer-table {
                        grid-template-columns: $GolferTableColumns;
                        // padding-right: 6px; // account for the scrollbar

                        @include mobile {
                            grid-template-columns: $Mobile_GolferTableColumns;
                            padding-right: 0px;
                        }

                        .round-score {
                            @include mobile {
                                display: none;
                            }
                        }

                        .team {
                            opacity: .6;
                            font-style: italic;
                        }
                    }

                    // Apply a border only if there is a .leaderboard-row before it
                    &+.leaderboard-row {
                        border-top: 1px solid var(--dashboard-row-border-color);
                    }

                    &:hover {
                        background: var(--leaderboard-row--hover-BG);
                    }

                    @include mobile {

                        &:hover,
                        &:focus,
                        &:active,
                        &:focus-visible {
                            background: unset;
                        }
                    }

                    .col {
                        display: flex;
                        align-items: center;
                        justify-content: center;
                        text-align: center;
                        padding: 8px;
                        font-weight: 600;

                        &.under-par {
                            color: var(--leaderboard-cell-under-FC); // Classic golf red. You can extract this to a CSS variable if you prefer!
                        }

                        &.over-par,
                        &.even-par {
                            color: var(--leaderboard-cell-over-FC); // Standard text color
                        }

                        &.cut {
                            color: var(--leaderboard-row-CUT-FC);
                        }
                    }

                    .pos {
                        padding-left: 16px;

                        @include mobile {
                            padding-left: 8px;
                        }
                    }

                    .team {
                        border-right: solid 1px var(--dashboard-header-border-color);
                    }

                    .total-score,
                    .team,
                    .pos {
                        font-weight: bold;
                    }

                    .golfer {
                        font-size: 13px;
                        justify-content: flex-start;
                        gap: 6px;
                    }

                    .total-score {
                        padding-right: 16px;
                        background-color: var(--scorecard-table-endCol-BG);

                        @include mobile {
                            padding-right: 6px;
                        }
                    }

                    &.selected {
                        border-left: 3px solid var(--dashboard-row-selected);
                    }

                    &.favorite {
                        border-left: 3px solid var(--dashboard-row-highlight);
                    }
                }
            }
        }

    }

    .golfer-panel {
        flex: 1; // Take up remaining vertical space
        overflow: hidden;
    }
}


// --- General Info Panel ---
.general-info-container {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 12px;
    color: var(--dashboard-table-FC);
    width: 100%;
    font-size: 0.9rem;
    padding: 16px;


    .event-name-container {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        padding: 12px 0;

        .event-name {
            max-width: 335px;
            padding: 0px 15px;
            color: var(--dashboard-panel-event-name);
            font-size: 24px;
            font-family: 'masters';
            text-align: center;
        }
    }

    .info-row {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-bottom: 8px;
        border-bottom: 1px solid var(--dashboard-row-border-color);

        &:last-child {
            border-bottom: none;
            padding-bottom: 0;
        }
    }

    .info-label {
        font-weight: bold;
        opacity: 0.8;
        text-transform: uppercase;
        font-size: 0.75rem;
        letter-spacing: 0.5px;
    }

    .info-value {
        font-weight: 500;
        font-weight: bold;
    }
}


// MOBILE HEADER and FOOTER
.dashboard-footer,
.dashboard-header {
    display: none;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 25px 0px 12px 0px;

    @include mobile {
        display: flex;
    }

    .logo-container {
        $logo-size: 35px;
        max-height: $logo-size;
        height: $logo-size;
        display: block;
        text-decoration: none;
        outline: none;

        img {
            height: inherit;
        }
    }
}

.dashboard-header {
    text-decoration: none;
    color: var(--LeaderboardDashboardNav-FC);
    display: none;
    padding: 10px 0px 20px 0px;
    align-items: center;
    justify-content: center;
    gap: 8px;

    @include mobile {
        display: flex;
    }

    .header-arrow {
        font-size: 24px;
    }

    .header-text {
        font-family: 'masters';
        font-size: 16px;
        transform: translateY(5px);
    }
}

@keyframes fadeInDown {
    from {
        opacity: 0;
        transform: translateY(-10px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

/* Custom Scrollbar */
::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.1);
}

::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.2);
    border-radius: 4px;
}

